<resources>
    <string name="app_name">Room_Entity_Demo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">User</string>
    <string name="user_id">User Id</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="add_user">Add User</string>
    <string name="delete_user">Delete User</string>
</resources>
